# tome

./: .gitignore  README.md  config.yaml  pyproject.toml  pytest.ini
src/: const.py  database.py  execution.py  fileactions.py  main.py  transcription.py
src/tests/: db_test.py  fileactions_test.py  test2.txt
src/tome/: __main__.py  config.py  database.py  execution.py  fileactions.py  messages.py  transcription.py
