[build-system]
requires = ["setuptools>=45.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "tome"
version = "1.0.2"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "openai-whisper",
    "ollama",
    "numpy",
    "halo",
    "pyyaml"
]
authors = [
    {name = "TheWorldJar", email = "theworldjar@protonmail.com"}
]
description = "Create transcripts from audio files and process thoses transcripts to create notes!"
requires-python = ">= 3.9"
[project.optional-dependencies]
dev = [
    "pytest"
]
[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
    /(
      \.git
      | \.venv
      | build
      | dist
      | db
      | transcribe
      | note
    )/
'''
[project.scripts]
tome = "tome.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
