[build-system]
requires = ["setuptools>=45.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "tome"
version = "1.1.1"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "openai-whisper",
    "ollama",
    "numpy",
    "halo",
    "pyyaml",
]
authors = [{ name = "TheWorldJar", email = "theworldjar@protonmail.com" }]
description = "Create transcripts from audio files and process thoses transcripts to create notes!"
requires-python = ">= 3.9"
[project.optional-dependencies]
dev = ["pytest"]
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["tome"]

[tool.ruff.format]
quote-style = "double"
[project.scripts]
tome = "tome.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
